--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ a {
     margin-right: -20px;
 }
 
-.accordion {
+.accordion,.hand {
     display: none;
 }
 
@@ -253,8 +253,8 @@ a {
 }
 
 .chapter-fabbar {
-    position: absolute;
-    padding: 40px 19px 20px;
+    /* position: absolute; */
+    padding: 40px 19px 15px;
     bottom: 0px;
     left: 0px;
 }
@@ -561,17 +561,20 @@ a {
     /* height: 30px; */
     align-items: start;
 }
+
+.input_field input.content:active{
+    color: #82ffb4;
+    cursor: pointer;
+}
 .input_field input.content {
     background-color: transparent;
     outline: none;
     border: 0;
+    height: 35px;
     margin-left: 5px;
 }
 
-.input_field:active .title * {
-    color: #82ffb4;
-    cursor: pointer;
-}
+
 
 input.content:focus,
 input.content:focus+span {
@@ -584,7 +587,7 @@ input.content:focus+span {
 }
 
 .title.d-flex.flex-row-reverse {
-    height: 30px;
+    /* height: 30px; */
     align-items: start;
 }
 
@@ -879,7 +882,7 @@ input.content:focus+span {
     .accordion {
         display: block;
         overflow-y: scroll;
-        height: 80%;
+        height: calc(100vh - 125px);
     }
     .accordion .editor {
         height: calc(100vh - 238px);
