--- a/css/style.css
+++ b/css/style.css
@@ -963,7 +963,13 @@ input.content:focus+span {
 }
 /* karim */
 #cht{
-    font-size: xxx-large;
     text-align: center;
-    padding-top: 30px;
+    font-family: Baskerville;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.8px;
+    color: #545454;
+    padding-top: 35px;
 }
